test/errors/align2.input.asm

* = $801

    lda #0
!align "string"
!align -1
    lda #1
